log

Wed 13 Mar 2024 08:28:26 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
f84e81e
Wed 13 Mar 2024 08:35:47 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
747241b
Wed 13 Mar 2024 08:37:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
a835c9c
Wed 13 Mar 2024 08:39:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:27: error: subscripted value is neither array nor pointer nor vector
   18 |       if (arr[i] > numeroM[i])
      |                           ^
Compilation failed
91ed159
Wed 13 Mar 2024 08:40:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
bb036e3
Wed 13 Mar 2024 08:41:00 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 10/70
d098570
